--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -9,7 +9,7 @@ form .nav-tabs > li.active > a:focus {
   border-bottom: none;
 }
 form {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
 }
 form .nav-tabs > li > a {
   border: none;
@@ -17,36 +17,34 @@ form .nav-tabs > li > a {
 .alert {
   margin-top: inherit!important; /* unb-lib.css override */
 }
+
+#newspapers-core-homepage .nav-item .active {
+  color: #343a40;
+}
+#newspapers-core-homepage .nav-item .active:hover {
+  cursor: default;
+}
 .tab a:focus {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-#search-wrapper .form-group {
-  margin-bottom: 0;
+
+#search-wrapper #title fieldset input:not(:focus),
+#search-wrapper #fulltext fieldset input:not(:focus) {
+  border-color: #6c757d;
 }
+
 .search-form .form-wrapper {
   margin-bottom: 1.5em;
 }
-.nav-tabs a:before {
-  display: inline-block;
-  font: var(--fa-font-solid);
-  margin-bottom: 2px;
-  margin-right: .25rem;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  font-size: small;
-  opacity: .8;
-  padding-right: 4px;
-  vertical-align: text-bottom;
+#panel-wrapper .form-group {
+  margin-bottom: 0;
 }
-a#tab-title:before {
-  content: "\f022";
+#search-wrapper .tab-pane {
+  width: 100%;
 }
-a#tab-fulltext:before {
-  content: "\f0c5";
-}
-a#tab-about:before {
-  content: "\f05a";
+#search-wrapper .tab-pane fieldset {
+  flex-grow: 1;
 }
 #search-wrapper>.active {
   display: flex;
@@ -72,6 +70,31 @@ div[data-drupal-selector="edit-actions"] .btn-unb-red:active {
   left: -1.33rem;
   top: .15rem;
 }
+.search-tips {
+  font-size: 90%;
+}
+.search-tips .h3 {
+  font-size: 100%;
+}
+
+.stats {
+  border-top: 1px solid #dee2e6;
+}
+.stats table tr {
+  border-style: hidden;
+}
+.stats table th {
+  font-size: .9rem;
+  letter-spacing: 1px;
+  line-height: 115%;
+  vertical-align: middle;
+}
+.stats table td {
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 3rem;
+  vertical-align: middle;
+}
 
 #footer-top h2 {
   color: #333;
@@ -81,7 +104,12 @@ div[data-drupal-selector="edit-actions"] .btn-unb-red:active {
 #footer-top > div {
   width: 100%;
 }
-@media (min-width: 982px) {
+@media (min-width: 992px) {
+  .stats {
+    border-top: none;
+    border-left: 1px solid #dee2e6;
+  }
+
   #footer-top > div {
     width: 50%;
   }
