NBNP-434 Misc icon updates re: modals/webform

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -313,7 +313,7 @@
           {% if display_report_link %}
           <div class="mb-1 link-report">
             <a href="{{ report_url }}">
-              Report additional information or errors<span class="fa-solid fa-marker fa-sm ml-1" aria-hidden="true"></span>
+              Report additional information or errors<span class="fa-solid fa-pen-to-square fa-sm ml-1" aria-hidden="true"></span>
             </a>
           </div>
           {% endif %}
@@ -347,7 +347,7 @@
                             <div class="{{ className }}">
                               <button class="btn btn-link p-0"
                               data-target="#missingDigital{{ digitalcount }}" data-toggle="modal" type="button">
-                               {{ missing_coverage_label }}<span class="fa-solid fa-window-restore fa-sm ml-1"
+                               {{ missing_coverage_label }}<span class="fa-solid fa-circle-info fa-sm ml-1"
                                 aria-description="(button opens a modal window)"></span>
                               </button>
                               <div id="missingDigital{{ digitalcount }}" class="modal fade"
@@ -359,7 +359,7 @@
                                         {{ field.label }}
                                       </div>
                                       <button class="btn btn-primary" aria-label="Close" data-dismiss="modal" type="button">
-                                        <span class="fa-solid fa-window-close mr-1" aria-hidden="true"></span>Close
+                                        Close<span class="fa-solid fa-window-close ml-1" aria-hidden="true"></span>
                                         <span class="sr-only">Modal</span>
                                       </button>
                                     </div>
@@ -387,8 +387,8 @@
                           <div class="{{ className }}">
                             <button class="btn btn-link p-0"
                                     data-target="#missingOnline{{ onlinecount }}" data-toggle="modal" type="button">
-                              {{ missing_coverage_label }}<span class="fa-solid fa-window-restore fa-sm ml-1"
-                                                                aria-description="(button opens a modal window)"></span>
+                              {{ missing_coverage_label }}<span class="fa-solid fa-circle-info fa-sm ml-1"
+                                 aria-description="(button opens a modal window)"></span>
                             </button>
                             <div id="missingOnline{{ onlinecount }}" class="modal fade"
                                  aria-hidden="true" aria-labelledby="online{{ onlinecount }}ModalLabel" tabindex="-1">
@@ -399,7 +399,7 @@
                                       {{ field.label }}
                                     </div>
                                     <button class="btn btn-primary" aria-label="Close" data-dismiss="modal" type="button">
-                                      <span class="fa-solid fa-window-close mr-1" aria-hidden="true"></span>Close
+                                      Close<span class="fa-solid fa-window-close ml-1" aria-hidden="true"></span>
                                       <span class="sr-only">Modal</span>
                                     </button>
                                   </div>
@@ -452,8 +452,8 @@
                               <div class="{{ className }}">
                                 <button class="btn btn-link p-0 text-left"
                                 data-target="#missingMicroform{{ microformcount }}" data-toggle="modal" type="button">
-                                  {{ missing_coverage_label }}<span class="fa-solid fa-window-restore fa-sm ml-1"
-                                  aria-description="(button opens a modal window)"></span>
+                                  {{ missing_coverage_label }}<span class="fa-solid fa-circle-info fa-sm ml-1"
+                                     aria-description="(button opens a modal window)"></span>
                                 </button>
                                 <div id="missingMicroform{{ microformcount }}" class="modal fade" aria-hidden="true"
                                 aria-labelledby="microform{{ microformcount }}ModalLabel" role="dialog" tabindex="-1">
@@ -464,7 +464,7 @@
                                           {{ field.label }}
                                         </div>
                                         <button class="btn btn-primary" aria-label="Close" data-dismiss="modal" type="button">
-                                          <span class="fa-solid fa-window-close mr-1" aria-hidden="true"></span>Close
+                                          Close<span class="fa-solid fa-window-close ml-1" aria-hidden="true"></span>
                                           <span class="sr-only">Modal</span>
                                         </button>
                                       </div>
@@ -527,7 +527,7 @@
                               <div class="{{ className }}">
                                 <button class="btn btn-link p-0 text-left"
                                 data-target="#missingPrint{{ printCount }}" data-toggle="modal" type="button">
-                                  {{ missing_coverage_label }}<span class="fa-solid fa-window-restore fa-sm ml-1"
+                                  {{ missing_coverage_label }}<span class="fa-solid fa-circle-info fa-sm ml-1"
                                   aria-description="(button opens a modal window)"></span>
                                 </button>
                                 <div id="missingPrint{{ printCount }}" class="modal fade"
@@ -539,7 +539,8 @@
                                           {{ field.label }}
                                         </div>
                                         <button class="btn btn-primary" aria-label="Close" data-dismiss="modal" type="button">
-                                          <span class="fa-solid fa-window-close mr-1" aria-hidden="true"></span>Close
+                                          Close<span class="fa-solid fa-window-close ml-1" aria-hidden="true"></span>
+                                          <span class="sr-only">Modal</span>
                                         </button>
                                       </div>
                                       <div class="modal-body">
