NBNP-434 Increase stats letter spacing

--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -92,6 +92,7 @@ div[data-drupal-selector="edit-actions"] .btn-unb-red:active {
 .stats table td {
   font-size: 1.5rem;
   font-weight: bold;
+  letter-spacing: 2px;
   line-height: 3rem;
   vertical-align: middle;
 }
