NBNP-385 Match partnership heading font style to section above

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -635,8 +635,9 @@ a.back-link::before {
   }
 
   h2 {
-    color: $black;
-    font-family: "ProximaNovaA-Regular", "Century Gothic", AppleGothic, Arial, sans-serif;
+    color: $dark;
+    font-family: 'ProximaNovaA-SemiBold','Century Gothic',AppleGothic,Arial,sans-serif;
+    font-weight: normal;
     font-size: large;
     text-align: center;
   }
