Add FA6 alert override re: unb_lib_theme 9.x

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_font_awesome.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_font_awesome.scss
@@ -2,7 +2,8 @@
 a.external:after,
 #header button[data-target="#navbar"][aria-expanded="false"]::after,
 #header button[data-target="#navbar"][aria-expanded="true"]:after,
-.site-footer>div:not(.footer-middle) a.nav-link::after {
+.site-footer>div:not(.footer-middle) a.nav-link::after,
+#emergency-banner .alert .alert-title:before {
   font: var(--fa-font-solid);
   font-size: 95%;
   font-weight: inherit;
