NBNP-275 Change pager button colors to subtheme link color

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_pager.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_pager.scss
@@ -28,7 +28,12 @@
     cursor: default;
   }
 
+  .page-item.active .page-link {
+    background: $link-color;
+  }
+
   a.page-link {
+    color: $link-color;
     &:hover {
       border-style: solid!important;
     }
