NBNP-275 Increase whitespace between months

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_owl-carousel.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_owl-carousel.scss
@@ -81,7 +81,7 @@
 
       h3 {
         border-bottom: 1px solid #6c6a69;
-        margin: 0;
+        margin-top: 1.5rem;
         padding-bottom: 2px;
       }
 
