--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_owl-carousel.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_owl-carousel.scss
@@ -59,6 +59,9 @@
     border: 1px solid #dee2e6;
     transition: all .2s ease-in-out;
   }
+  .issue-date {
+    font-weight: bold;
+  }
 
   .issue-meta {
     color: $text-muted;
