NBNP-426 Edit publication|holdings sidebar|footer text

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -581,7 +581,7 @@
                 <abbr title="Provincial Archives of New Brunswick">PANB</abbr> and
                 <abbr title="Council of Archives New Brunswick">CANB</abbr>
                 is currently underway to verify all New Brunswick newspaper holdings.
-                <a href="/project">This project</a>, while comprehensive, is not anticipated to be completed until sometime in 2023.
+                <a href="/project">This project</a>, while comprehensive, is not anticipated to be completed until 2024.
               </p>
             </div>
           </div>
