NBNP-92 Improve accessibility re: Bootstrap Modals

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -2,6 +2,7 @@
 @import '../../../../../vendor/unb-libraries/unb_lib_theme/src/scss/style.scss';
 
 @import "local-variables";
+@import "accessibility";
 @import "breadcrumb";
 @import "digital-page-lister";
 @import "facets";
