NBNP-417 Rename citation library->copy_citation

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -68,6 +68,7 @@
  * @ingroup themeable
  */
 #}
+{{ attach_library('newspapers_core/copy_citation') }}
 {{ attach_library('newspapers_core/holding-display') }}
 {% set holdingSoftLimit = 5 %}
 
