NBNP-417 Style override re: modal-title

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -3,7 +3,13 @@
 /* Element style tweaks */
 h1 {
   margin-bottom: 2rem;
+
+  &.modal-title {
+    line-height: 1.25;
+    margin-bottom: 0;
+  }
 }
+
 figcaption {
   margin-bottom: 1em;
 }
