NBNP-417 Enable citation buttons: publication/issue page displays

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -307,6 +307,10 @@
               <dd class="no-borders">{{ content.field_supplemental_information|field_value }}</dd>
             {% endif %}
           </dl>
+
+          {% if citation %}
+            {{ citation }}
+          {% endif %}
         </div>
 
         <hr>
