NBNP-443 Add breakpoint re: search submit button margin

--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -59,7 +59,12 @@ form .nav-tabs > li > a {
   width: 75%;
 }
 div[data-drupal-selector="edit-actions"] {
-  margin-top: 1.875rem;
+  margin-top: 1rem;
+}
+@media (min-width: 980px) {
+  div[data-drupal-selector="edit-actions"] {
+    margin-top: 1.875rem;
+  }
 }
 div[data-drupal-selector="edit-actions"] input {
   line-height: normal;
