--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -500,11 +500,9 @@ a.btn-add:active {
   margin-bottom: 0;
 }
 .search-results .excerpt {
-  color: #545454;
+  color: $gray-700;
 }
-.search-results strong {
-  color: $unb-lib-panel-heading;
-}
+
 /* Override Search API Autocomplete */
 .search-api-autocomplete-search .ui-menu-item:hover {
   background: inherit;
