--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -122,6 +122,9 @@ dl .inline-list {
     }
   }
 }
+figure .field--type-image img {
+  margin-bottom: 0
+}
 
 /* Chosen overrides */
 select[multiple="multiple"] + .form-control {
