NBNP-443 Fix discrepancy between emulation/real hardware

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -79,8 +79,8 @@
 {% endif %}
 
 {% if view_mode == 'featured' %}
-  <div{{ attributes.addClass("featured-publication") }}>
-    <div class="float-left mr-3">
+  <div{{ attributes.addClass("featured-publication d-flex flex-column flex-sm-row") }}>
+    <div class="mr-3">
       {% if content.field_sample_image|field_value %}
         <figure>{{ content.field_sample_image }}</figure>
       {% else %}
