--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -479,7 +479,7 @@ a.btn-add:active {
   margin-bottom: 1.5em;
 }
 .table > thead:first-child > tr:first-child > th {
-  border-top: 2px solid #ddd;
+  border-top: 2px solid #050506;
 }
 
 .search-results time {
@@ -496,7 +496,15 @@ a.btn-add:active {
   display: none;
 }
 .search-results h2 {
-  font-size: 1em;
+  color: $gray-700;
+  font-size: 1.3em;
+  margin-bottom: 0.6rem;
+  margin-top: 2rem;
+
+  &.untabled {
+    border-bottom: 1px solid $gray-700;
+    margin-bottom: 1.5rem;
+  }
 }
 .search-results h3 {
   font-size: 1.15em;
@@ -582,7 +590,7 @@ a.back-link::before {
   }
 
   h3 {
-    border-bottom: 2px solid #e5e5e5;
+    border-bottom: 1px solid #495057;
     font-size: 18px;
     margin-bottom: 0.5em;
   }
