NBNP-131 Revert inadvertantly changed padding class

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -120,7 +120,7 @@
         {{ title_suffix }}
 
         <div class="title-details">
-          <h2 class="bg-unb-light border pl-2">{% trans %}Details{% endtrans %}</h2>
+          <h2 class="bg-unb-light border p-2">{% trans %}Details{% endtrans %}</h2>
           {% if content.field_sample_image|field_value %}
             <figure class="image-link-shadow">
               {{ content.field_sample_image }}
