NBNP-443 Taken duplicated Featured link out of tab focus

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -90,7 +90,7 @@
     </div>
     <div>
       <h2>Featured Publication</h2>
-      <div class="title"><strong><a href="{{ url }}">{{ label }}</a></strong></div>
+      <div class="title"><strong><a href="{{ url }}" tabindex="-1">{{ label }}</a></strong></div>
       {% if publication_date_value %}
         <div class="date">{{ publication_date_value }}</div>
       {% endif %}
