NBNP-142 Lighten search result|holding text

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -469,7 +469,7 @@ a.btn-add:active {
 }
 .search-results tbody .views-field-field-sort-title span.holding:first-of-type::before {
   content: 'Available: ';
-  color: $black;
+  color: $gray-800;
 }
 .search-results table a {
   display: block;
