NBNP-406 More OpenSeadragon accessibility improvements

--- a/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer.css
+++ b/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer.css
@@ -17,6 +17,11 @@
 .digital-serial-page-highlight {
   background-color: #f00;
   opacity: 0.3;
+
+  &:hover {
+    background-color: #f00;
+    cursor: default;
+  }
 }
 
 .border.btn-link:hover {
