NBNP-406 Add highlight rules re: accessibility CSS asset

--- a/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer_accessibility.css
+++ b/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer_accessibility.css
@@ -2,6 +2,10 @@
   cursor: pointer;
 }
 
+.digital-serial-page-highlight {
+  background-color: #f00;
+  opacity: 0.3;
+}
 .digital-serial-page-highlight:hover {
   background-color: #f00;
   cursor: default;
