--- a/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer_accessibility.css
+++ b/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer_accessibility.css
@@ -6,6 +6,9 @@
   background-color: #f00;
   opacity: 0.3;
 }
+.digital-serial-page-highlight:focus {
+  box-shadow: 0 0 0 0.25rem rgb(255, 0, 0);
+}
 .digital-serial-page-highlight:hover {
   background-color: #f00;
   cursor: default;
