NBNP-142 Add/configure mobile toggle feature for sidebar (Facets) region

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -14,6 +14,7 @@
 @import "pager";
 @import "scrollup";
 @import "sidebar";
+@import "sidebar_toggle";
 @import "table";
 @import "ui-autocomplete";
 @import "views";
