NBNP-443 Add Reset link sass state rules

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
@@ -8,6 +8,17 @@
         margin-right: .5rem;
       }
     }
+
+    .reset-link {
+      border: none;
+      color: $link-color;
+
+      &:focus,
+      &:hover {
+        box-shadow: none;
+        color: $link-color-hover;
+      }
+    }
   }
 }
 
